--- a/Sources/Linxens.Gui/RepetitiveGUI.xaml
+++ b/Sources/Linxens.Gui/RepetitiveGUI.xaml
@@ -82,7 +82,7 @@
             </DataGrid.Columns>-->
             <DataGrid.ItemContainerStyle>
                 <Style TargetType="DataGridRow" >
-                    
+
                 </Style>
             </DataGrid.ItemContainerStyle>
         </DataGrid>
@@ -95,22 +95,8 @@
         <Button Content="+ Add" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Margin="725,480,0,0" Click="AddScrap"/>
         <Label Content="Current File" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="345,15,0,0"
                FontWeight="Bold" />
-        <RichTextBox HorizontalAlignment="Left" Height="241" VerticalAlignment="Top" Width="403" Margin="5,555,0,0">
-            <FlowDocument>
-                <Paragraph>
-                    <Run Text="RichTextBox" />
-                </Paragraph>
-            </FlowDocument>
-        </RichTextBox>
         <Label Content="QAD Response :" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="5,524,0,0"
                FontWeight="Bold" RenderTransformOrigin="0.505,0.808" />
-        <RichTextBox HorizontalAlignment="Left" Height="241" VerticalAlignment="Top" Width="402" Margin="413,555,0,0">
-            <FlowDocument>
-                <Paragraph>
-                    <Run Text="RichTextBox" />
-                </Paragraph>
-            </FlowDocument>
-        </RichTextBox>
         <Label Content="Data Log :" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="413,525,0,0"
                FontWeight="Bold" />
         <TextBox x:Name="Statut" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="..." VerticalAlignment="Top"
@@ -119,6 +105,8 @@
         <Label Content="Status :" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="289,524,0,0"
                FontWeight="Bold" />
         <Button Content="Submit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="90" Margin="725,515,0,0" Click="ButtonBase_OnClick"/>
+        <ListBox Name="techLogs" HorizontalAlignment="Left" Height="237" VerticalAlignment="Top" Width="397" Margin="413,556,0,0"/>
+        <ListBox Name="qadLogs" HorizontalAlignment="Left" Height="238" VerticalAlignment="Top" Width="398" Margin="10,555,0,0"/>
 
     </Grid>
 </Window>
