Add password Edit

--- a/Sources/Linxens.Gui/RepetitiveGUI.xaml
+++ b/Sources/Linxens.Gui/RepetitiveGUI.xaml
@@ -9,11 +9,11 @@
     <Grid Margin="0,0,2,0">
         <Border BorderBrush="Gray" BorderThickness="1" HorizontalAlignment="Left" Height="464" Margin="345,46,0,0"
                 VerticalAlignment="Top" Width="470" >
-            <Button x:Name="btRemove" Content="Remove" HorizontalAlignment="Left" Height="20" Margin="290.2,433.2,0,0" VerticalAlignment="Top" Width="73" Click="RemoveScrap"/>
+            <Button x:Name="btRemove" Content="Remove" HorizontalAlignment="Left" Margin="290.2,433.2,0,9.2" Width="73" Click="RemoveScrap"/>
         </Border>
         <Border BorderBrush="Gray" BorderThickness="1" HorizontalAlignment="Left" Height="464" Margin="5,46,0,0"
                 VerticalAlignment="Top" Width="335">
-            <Button Content="Browse" HorizontalAlignment="Left" Height="20" Margin="251.2,433.2,0,0" VerticalAlignment="Top" Width="73"  Click="AddFileWithBrowse"/>
+            <Button x:Name="btBrowse" Content="Browse" HorizontalAlignment="Left" Height="20" Margin="251.2,433.2,0,0" VerticalAlignment="Top" Width="73"  Click="AddFileWithBrowse"/>
         </Border>
 
         <TextBox x:Name="tb_site" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top"
@@ -103,12 +103,13 @@
                   />
         <Label Content="Status :" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="289,524,0,0"
                FontWeight="Bold" />
-        <Button Name="btSend" Content="Submit" HorizontalAlignment="Left" VerticalAlignment="Top" Width="90" Margin="725,515,0,0" Click="Submit_OnClick"/>
+        <Button Name="btSend" Content="Submit" HorizontalAlignment="Left" Height="20" VerticalAlignment="Top" Width="75" Margin="725,515,0,0" Click="Submit_OnClick"/>
         <ListBox Name="techLogs" HorizontalAlignment="Left" Height="237" VerticalAlignment="Top" Width="397" Margin="413,556,0,0"/>
         <ListBox Name="qadLogs" HorizontalAlignment="Left" Height="238" VerticalAlignment="Top" Width="398" Margin="10,555,0,0"/>
         <TextBox x:Name="tb_tapeN" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap"
             VerticalAlignment="Top" Width="120" Margin="680,220,0,0" KeyUp="Tb_tapeN_KeyUp" MaxLength="20"/>
         <Label Content="Tape#" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="590,217,0,0" />
+        <Button x:Name="edit" Content="Edit" HorizontalAlignment="Left" Height="20" Margin="636,515,0,0" VerticalAlignment="Top" Width="75" Click="EditPassWord"/>
 
     </Grid>
 </Window>
