Finish final version

--- a/Sources/Linxens.Gui/PasswordConfirm.xaml
+++ b/Sources/Linxens.Gui/PasswordConfirm.xaml
@@ -5,13 +5,13 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Linxens.Gui"
       mc:Ignorable="d"
-      Title="Password Confirm" Height="171.974" Width="503.344"
+      Title="Password Confirm" Height="85.994" Width="433"
       ResizeMode="NoResize">
 
-    <Grid Margin="0,10,-0.2,33.4">
-        <Button x:Name="btBrowse" Content="Connect" HorizontalAlignment="Left" Margin="381,65,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click" Height="23"/>
-        <Label Content="Enter your password :" HorizontalAlignment="Left" Height="48" Margin="10,65,0,0" VerticalAlignment="Top" Width="138"/>
-        <PasswordBox x:Name="pwdResponse" HorizontalAlignment="Left" Margin="153,60,0,0" VerticalAlignment="Top" Height="28" Width="187"/>
+    <Grid Margin="0,10,0,1">
+        <Button x:Name="btOk" Content="Ok" HorizontalAlignment="Left" Margin="340,10,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click" Height="23"/>
+        <Label Content="Enter your password :" HorizontalAlignment="Left" Height="25" Margin="10,9,0,0" VerticalAlignment="Top" Width="138"/>
+        <PasswordBox x:Name="pwdResponse" HorizontalAlignment="Left" Margin="140,10,0,0" VerticalAlignment="Top" Height="23" Width="187" KeyUp="PwdResponse_OnKeyUp"/>
 
 
     </Grid>
